--- a/app.css
+++ b/app.css
@@ -4,7 +4,41 @@
     box-sizing:border-box;
 }
 
-body{
+html, body, #root{
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
+
+main{
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#button{
+    text-align: center;
+}
+
+#form{
+    display: none;
+    border: 2px solid black;
+    padding: 10px;
+    border-radius: 8px;
+
+}
+
+#feedback{
+    display: none;
+}
+
+#greeting{
+    border: 2px solid black;
+    padding: 10px;
+    border-radius: 8px;
+    display: none;
+}
+
